k0s/manifests/open-webui/kustomize/main/base/resources/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: open-webui
  namespace: open-webui
  labels:
    app.kubernetes.io/version: "0.7.2"
    app.kubernetes.io/name: open-webui
    app.kubernetes.io/instance: open-webui
    app.kubernetes.io/component: open-webui
    
spec:
  replicas: 1
  serviceName: open-webui
  selector:
    matchLabels:
      app.kubernetes.io/instance: open-webui
      app.kubernetes.io/component: open-webui
  template:
    metadata:
      labels:
        app.kubernetes.io/version: "0.7.2"
        app.kubernetes.io/name: open-webui
        app.kubernetes.io/instance: open-webui
        app.kubernetes.io/component: open-webui
    spec:
      enableServiceLinks: false
      automountServiceAccountToken: false
      serviceAccountName: existing-sa
      containers:
      - name: open-webui
        image: ghcr.io/open-webui/open-webui:0.7.2
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
        volumeMounts:
        - name: data
          mountPath: /app/backend/data
        tty: true
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: open-webui
