k0s/manifests/open-webui/kustomize/main/base/resources/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  namespace: open-webui
  labels:
    app.kubernetes.io/version: "0.7.2"
    app.kubernetes.io/name: open-webui
    app.kubernetes.io/instance: open-webui
    app.kubernetes.io/component: open-webui
spec:
  selector:
    app.kubernetes.io/instance: open-webui
    app.kubernetes.io/component: open-webui
  type: ClusterIP
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: http
